Fix preference z-index error

--- a/src/src/components/Forms/Survey/QuestionTypes/Preference/Preference.scss
+++ b/src/src/components/Forms/Survey/QuestionTypes/Preference/Preference.scss
@@ -7,7 +7,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  z-index: 4;
 
   .preference-elements {
     display: flex;
